#67 Feat: add apply mail send method

--- a/src/main/resources/templates/applicantVocal.html
+++ b/src/main/resources/templates/applicantVocal.html
@@ -50,7 +50,7 @@
     연락처가 아닌 경우 학회장에게 문자 부탁드립니다.<br />
 </p>
 <strong style="background-color: #e8e9ed; padding: 16px; border-radius: 8px; display: inline-block">
-    임가현 님의 연락처 : 010-1234-5678
+    [[${name}]] 님의 연락처 : [[${phoneNum}]]
 </strong>
 <p>오디션 당일에 뵙겠습니다! 감사합니다 :)</p>
 <hr color="#CBCDD7" size="3" />
