--- a/src/main/resources/templates/ticketFreshman.html
+++ b/src/main/resources/templates/ticketFreshman.html
@@ -15,10 +15,10 @@
     <strong>▪ Welcome to the show ▪</strong>
     <hr color="#CBCDD7" size="2" />
     <p style="padding-left: 8px">
-        이름 : 임가현<br />
-        학번 : C135327<br />
-        전화번호 : 010-1234-5678<br />
-        예매번호 : cfksk2de31<br />
+        이름 : [[${buyer}]]<br />
+        학번 : [[${studentId}]]<br />
+        전화번호 : [[${phoneNum}]]<br />
+        예매번호 : [[${reservationId}]]<br />
         티켓 : 1장 <br />
     </p>
 </div>
